# animation-gif-generator

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py  animation.py  drawer.py  main.py  test_animation.py  test_drawer.py
src/drawer/: comet_drawer.py  drawer.py  particle_drawer.py  text_drawer.py
tests/: test_animation.py  test_drawer.py
